[gd_scene load_steps=14 format=2]

[ext_resource path="res://World/PositionManager.gd" type="Script" id=1]
[ext_resource path="res://World/Environment/WorldEnvironment.tscn" type="PackedScene" id=2]
[ext_resource path="res://Perspectives/PC/FirstPersonPC.tscn" type="PackedScene" id=3]
[ext_resource path="res://World/TimeManager.gd" type="Script" id=4]
[ext_resource path="res://World/WeatherManager.gd" type="Script" id=5]
[ext_resource path="res://Layers/LayerRenderers.tscn" type="PackedScene" id=6]
[ext_resource path="res://Layers/LayerConfigurator.tscn" type="PackedScene" id=7]
[ext_resource path="res://World/World.gd" type="Script" id=8]
[ext_resource path="res://Communication/GetObjectLayerDataRequestHandler.gd" type="Script" id=9]
[ext_resource path="res://Communication/SetObjectPositionRequestHandler.gd" type="Script" id=10]
[ext_resource path="res://Communication/CreateFeatureRequestHandler.gd" type="Script" id=11]
[ext_resource path="res://GameSystem/TableCommunicator.tscn" type="PackedScene" id=12]
[ext_resource path="res://Communication/Table/PlayerPositionSender.gd" type="Script" id=13]

[node name="World" type="Node3D"]
script = ExtResource( 8 )

[node name="WorldEnvironment" parent="." instance=ExtResource( 2 )]

[node name="Terrain" type="Node3D" parent="."]

[node name="LayerRenderers" parent="Terrain" instance=ExtResource( 6 )]

[node name="FirstPersonPC" parent="." instance=ExtResource( 3 )]

[node name="PlayerPositionSender" type="Node" parent="FirstPersonPC"]
script = ExtResource( 13 )

[node name="LayerConfigurator" parent="." instance=ExtResource( 7 )]

[node name="PositionManager" type="Node" parent="."]
script = ExtResource( 1 )
center_node_path = NodePath("../FirstPersonPC")

[node name="TimeManager" type="Node" parent="."]
script = ExtResource( 4 )

[node name="WeatherManager" type="Node" parent="."]
script = ExtResource( 5 )

[node name="GeneralRequestHandlers" type="Node" parent="."]

[node name="GetObjectLayerDataRequestHandler" type="Node" parent="GeneralRequestHandlers"]
script = ExtResource( 9 )

[node name="SetObjectPositionRequestHandler" type="Node" parent="GeneralRequestHandlers"]
script = ExtResource( 10 )

[node name="CreateFeatureRequestHandler" type="Node" parent="GeneralRequestHandlers"]
script = ExtResource( 11 )

[node name="TableCommunicator" parent="." instance=ExtResource( 12 )]
